# notify-me

./: .coveragerc  .gitignore  AUTHORS.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst
notify_me/: __init__.py  hookspecs.py  host.py  lib.py
src/notify_me/: __init__.py  notify_me.py  script.py  skeleton.py
tests/: conftest.py  test_cli_script.py  test_notify_me.py  test_skeleton.py
