[tool.poetry]
name = "notify-me"
version = "0.1.0"
description = ""
authors = ["John Hossler <john.m.hossler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pluggy = "^0.13.1"
singleton-decorator = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
notify-me = "notify_me.host:main"
